implement education controller
