# backend/src/main/kotlin/com/smartcity/education/backend/models/Matriculation.kt
@@ -1,6 +1,9 @@
 package com.smartcity.education.backend.models
 
+import com.fasterxml.jackson.annotation.JsonIgnore
 import com.fasterxml.jackson.annotation.JsonProperty
+import java.time.LocalDateTime
+import javax.persistence.*
 
 /**
  * Data class representing a matriculation
@@ -9,17 +12,28 @@ import com.fasterxml.jackson.annotation.JsonProperty
  * @param studentId Id of the matriculation's student
  * @param educationId Id of the matriculation's education
  */
+@Entity
 data class Matriculation(
+    @field:Id
+    @field:GeneratedValue
     @field:JsonProperty("id")
     val id: Long? = null,
 
     @field:JsonProperty("date", required = true)
-    val date: String,
+    val date: LocalDateTime,
 
-    @field:JsonProperty("studentId")
-    val studentId: Long? = null,
+    @field:ManyToOne(fetch = FetchType.LAZY, cascade = [CascadeType.ALL])
+    @field:JsonIgnore
+    var education: Education? = null,
 
-    @field:JsonProperty("educationId")
-    val educationId: Long? = null
-)
+    @field:ManyToOne(fetch = FetchType.LAZY, cascade = [CascadeType.ALL])
+    @field:JsonIgnore
+    var student: Student? = null
+) {
+    @get:JsonProperty("educationId")
+    val educationId: Long? get() = education?.id
+
+    @get:JsonProperty("studentId")
+    val studentId: Long? get() = student?.id
+}
 
